Projet GL/test/src/test/deca/syntax/invalid/bad_car.res
src/test/deca/syntax/invalid/bad_car.deca:14:4: token recognition error at: '²'
